// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu XmasLogo should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <span
        class="emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 40 40"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 16.8L20 0L37 16.8V40H3V16.8Z"
            fill="#31448F"
          />
          <path
            d="M3 16.8L20 0L37 16.8V30L3 16.8Z"
            fill="#7BC9EB"
          />
          <path
            d="M37 40H27.0488L12.9512 6.96585L20 0L37 16.8V40Z"
            fill="#0061A8"
          />
          <path
            d="M37 16.8V30L20 23.4829L12.9512 6.96585L20 0L37 16.8Z"
            fill="var(--nav-menu-icon-secondary-accent)"
          />
        </svg>
      </span>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <span
      class="emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
    >
      <svg
        fill="none"
        height="1em"
        viewBox="0 0 40 40"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 16.8L20 0L37 16.8V40H3V16.8Z"
          fill="#31448F"
        />
        <path
          d="M3 16.8L20 0L37 16.8V30L3 16.8Z"
          fill="#7BC9EB"
        />
        <path
          d="M37 40H27.0488L12.9512 6.96585L20 0L37 16.8V40Z"
          fill="#0061A8"
        />
        <path
          d="M37 16.8V30L20 23.4829L12.9512 6.96585L20 0L37 16.8Z"
          fill="var(--nav-menu-icon-secondary-accent)"
        />
      </svg>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Menu should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <nav
        class="e6wdw83-el-nav-container"
      >
        <a
          class="e1walk9-el-nav-item-active ej3nojh-el-nav-item"
        >
          <span
            class="emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 40 40"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 16.8L20 0L37 16.8V40H3V16.8Z"
                fill="#31448F"
              />
              <path
                d="M3 16.8L20 0L37 16.8V30L3 16.8Z"
                fill="#7BC9EB"
              />
              <path
                d="M37 40H27.0488L12.9512 6.96585L20 0L37 16.8V40Z"
                fill="#0061A8"
              />
              <path
                d="M37 16.8V30L20 23.4829L12.9512 6.96585L20 0L37 16.8Z"
                fill="var(--nav-menu-icon-secondary-accent)"
              />
            </svg>
          </span>
          <span
            class="e1fle5tm-el-intent-neutral et0k7gk-el-ml-auto e164f2tp-el-mr2 e186fz8c-el-nav-item-hide-desktop ej9yrfo-el-icon"
            style="font-size: 2rem;"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="var(--nav-menu-icon-secondary-accent)"
                height="32"
                rx="4"
                width="32"
              />
              <line
                stroke="white"
                stroke-width="1.5"
                x1="10"
                x2="22"
                y1="12.25"
                y2="12.25"
              />
              <line
                stroke="white"
                stroke-width="1.5"
                x1="10"
                x2="22"
                y1="20.25"
                y2="20.25"
              />
              <line
                stroke="white"
                stroke-width="1.5"
                x1="10"
                x2="22"
                y1="16.25"
                y2="16.25"
              />
            </svg>
          </span>
        </a>
        <a
          class="ej3nojh-el-nav-item"
        >
          <span
            class="e14wa5k9-el-nav-item-icon emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 40 40"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="var(--nav-menu-icon-primary-accent)"
                height="27"
                width="15"
                x="13.2"
                y="7"
              />
              <path
                d="M23.3583 8.41675H20.4583C20.0577 8.41675 19.7333 8.74107 19.7333 9.14175C19.7333 9.54242 20.0577 9.86675 20.4583 9.86675H23.3583C23.759 9.86675 24.0833 9.54242 24.0833 9.14175C24.0833 8.74107 23.759 8.41675 23.3583 8.41675Z"
                fill="var(--nav-menu-icon-secondary-accent)"
              />
              <path
                d="M26.5 6H14.9C13.3011 6 12 7.30115 12 8.9V32.1C12 33.6989 13.3011 35 14.9 35H26.5C28.0989 35 29.4 33.6989 29.4 32.1V8.9C29.4 7.30115 28.0989 6 26.5 6ZM27.95 32.1C27.95 32.9009 27.3009 33.55 26.5 33.55H14.9C14.0991 33.55 13.45 32.9009 13.45 32.1V8.9C13.45 8.0991 14.0991 7.45 14.9 7.45H26.5C27.3009 7.45 27.95 8.0991 27.95 8.9V32.1Z"
                fill="var(--nav-menu-icon-primary-accent)"
              />
              <path
                d="M20.7 32.5834C21.5008 32.5834 22.15 31.9342 22.15 31.1334C22.15 30.3325 21.5008 29.6833 20.7 29.6833C19.8992 29.6833 19.25 30.3325 19.25 31.1334C19.25 31.9342 19.8992 32.5834 20.7 32.5834Z"
                fill="var(--nav-menu-icon-secondary-accent)"
              />
              <path
                d="M18.0417 9.86675C18.4421 9.86675 18.7667 9.54215 18.7667 9.14175C18.7667 8.74134 18.4421 8.41675 18.0417 8.41675C17.6413 8.41675 17.3167 8.74134 17.3167 9.14175C17.3167 9.54215 17.6413 9.86675 18.0417 9.86675Z"
                fill="var(--nav-menu-icon-secondary-accent)"
              />
              <path
                d="M34.6411 17.5394C34.4178 16.1104 33.179 15.0137 31.6883 15.0137C31.1275 15.0137 30.5886 15.1688 30.1212 15.4582C29.4101 14.2632 28.13 13.5195 26.7078 13.5195C24.5109 13.5195 22.7234 15.307 22.7234 17.5039C22.7234 17.5175 22.7234 17.5316 22.7239 17.5452C21.312 17.7831 20.2 19.0141 20.2 20.4922C20.2 22.14 21.5737 23.4805 23.2215 23.4805H34.1785C35.8264 23.4805 37.2 22.14 37.2 20.4922C37.2 19.0015 36.07 17.7627 34.6411 17.5394Z"
                fill="var(--nav-menu-icon-secondary-accent)"
              />
            </svg>
          </span>
          Browse
        </a>
        <a
          class="ej3nojh-el-nav-item"
        >
          <span
            class="e14wa5k9-el-nav-item-icon emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 40 40"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.6406 19.1797H18.3594C17.906 19.1797 17.5391 19.5466 17.5391 20V27.3828H15.8985C15.5876 27.3828 15.3041 27.5582 15.1647 27.8362C15.0261 28.1142 15.0557 28.4466 15.2424 28.695L19.3439 33.6715C19.4985 33.8782 19.7421 34 20 34C20.258 34 20.5015 33.8782 20.6561 33.6715L24.7577 28.695C24.9443 28.4466 24.974 28.1142 24.8354 27.8362C24.696 27.5582 24.4124 27.3828 24.1016 27.3828H22.461V20C22.461 19.5466 22.0941 19.1797 21.6406 19.1797Z"
                fill="var(--nav-menu-icon-secondary-accent)"
              />
              <path
                d="M28.9409 14.2586C28.6037 12.6068 27.2618 11.3138 25.5259 11.0391C24.8097 8.15595 22.1894 6 19.1797 6C16.1764 6 13.5849 8.1239 12.8503 10.983C12.7734 10.979 12.6957 10.9766 12.6172 10.9766C8.99868 10.9766 6 13.9206 6 17.5391C6 21.1576 8.99868 24.1016 12.6172 24.1016H15.8984V20C15.8984 18.643 17.0024 17.5391 18.3594 17.5391H21.6406C22.9976 17.5391 24.1016 18.643 24.1016 20V24.1016H29.0234C31.7375 24.1016 34 21.8938 34 19.1797C34 16.4384 31.6998 14.1905 28.9409 14.2586Z"
                fill="var(--nav-menu-icon-primary-accent)"
              />
            </svg>
          </span>
          Installed
        </a>
        <a
          class="ej3nojh-el-nav-item"
        >
          <span
            class="e14wa5k9-el-nav-item-icon emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 40 40"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25.6627 7.48678H23.4494C23.4494 5.56109 21.905 4 20 4C18.095 4 16.5506 5.56109 16.5506 7.48678H14.3373V11.9565H25.6627V7.48678H25.6627Z"
                fill="var(--nav-menu-icon-secondary-accent)"
              />
              <path
                d="M27.434 7.48682V13.747H12.566V7.48682H9V31.557C9 33.2139 10.3431 34.557 12 34.557H28C29.6569 34.557 31 33.2139 31 31.557V7.48682H27.434ZM20 31.9021C15.9497 31.9021 12.6546 28.5712 12.6546 24.477C12.6546 20.3829 15.9498 17.052 20 17.052C24.0502 17.052 27.3454 20.3829 27.3454 24.477C27.3454 28.5712 24.0503 31.9021 20 31.9021Z"
                fill="var(--nav-menu-icon-primary-accent)"
              />
              <path
                d="M25.1131 23.2122L24.2133 23.0966C24.1391 22.8658 24.0477 22.6433 23.941 22.4318L24.4967 21.7085C24.7216 21.4158 24.6953 21.0026 24.4383 20.751L23.6844 19.989C23.4332 19.7268 23.0244 19.7007 22.7344 19.9276L22.0198 20.4893C21.8106 20.3814 21.5904 20.289 21.3617 20.214L21.2473 19.3059C21.2042 18.9416 20.8983 18.6672 20.536 18.6672H19.4639C19.1016 18.6672 18.7957 18.9416 18.7526 19.3044L18.6383 20.214C18.4095 20.289 18.1893 20.3809 17.9801 20.4893L17.2651 19.9276C16.976 19.7007 16.5672 19.7268 16.3179 19.9866L15.564 20.7481C15.3046 21.0026 15.2783 21.4158 15.5032 21.709L16.0589 22.4318C15.9517 22.6433 15.8608 22.8658 15.7866 23.0966L14.8882 23.2122C14.5278 23.2558 14.2564 23.5649 14.2564 23.9312V25.0149C14.2564 25.3812 14.5278 25.6903 14.8868 25.7339L15.7866 25.8495C15.8608 26.0803 15.9522 26.3029 16.0589 26.5143L15.5032 27.2376C15.2783 27.5303 15.3046 27.9435 15.5616 28.1951L16.3155 28.9571C16.5672 29.2188 16.9755 29.245 17.2655 29.0181L17.9806 28.4563C18.1898 28.5647 18.4099 28.6571 18.6383 28.7316L18.7526 29.6393C18.7957 30.0046 19.1016 30.2789 19.4639 30.2789H20.536C20.8983 30.2789 21.2042 30.0046 21.2473 29.6417L21.3617 28.7321C21.59 28.6571 21.8101 28.5647 22.0193 28.4568L22.7348 29.0185C23.0244 29.2459 23.4332 29.2193 23.682 28.9595L24.4359 28.1975C24.6953 27.943 24.7216 27.5303 24.4967 27.2371L23.941 26.5143C24.0482 26.3029 24.1396 26.0803 24.2133 25.8495L25.1112 25.7339C25.4716 25.6903 25.743 25.3812 25.743 25.0149V23.9312C25.7435 23.5649 25.4721 23.2558 25.1131 23.2122ZM20 26.8922C18.6804 26.8922 17.6068 25.8069 17.6068 24.4731C17.6068 23.1392 18.6804 22.054 20 22.054C21.3195 22.054 22.3931 23.1392 22.3931 24.4731C22.3931 25.8069 21.3195 26.8922 20 26.8922Z"
                fill="var(--nav-menu-icon-secondary-accent)"
              />
            </svg>
          </span>
          Manage
        </a>
        <a
          class="ej3nojh-el-nav-item"
        >
          <span
            class="e14wa5k9-el-nav-item-icon emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 40 40"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M30.0373 10H9.96266C7.77789 10 6 11.7779 6 13.9632V26.5227C6 28.708 7.77789 30.4859 9.96266 30.4859H30.0373C32.2221 30.4859 34 28.708 34 26.5227V13.9632C34 11.7779 32.2221 10 30.0373 10ZM16.1615 16.3049L11.9927 20.4738L15.6999 24.181C16.0204 24.5015 16.0204 25.021 15.6999 25.3409C15.38 25.6614 14.8605 25.6614 14.54 25.3409L10.2525 21.0534C9.93203 20.733 9.93203 20.214 10.2525 19.8935L15.001 15.145C15.3215 14.8245 15.841 14.8245 16.1615 15.145C16.4814 15.4649 16.4814 15.9845 16.1615 16.3049ZM22.928 14.375L18.5902 26.6573C18.4392 27.0849 17.9705 27.3086 17.5434 27.1577C17.1163 27.0067 16.8921 26.538 17.043 26.1109L21.3809 13.8287C21.5318 13.4016 21.9999 13.1773 22.4276 13.3283C22.8547 13.4792 23.0789 13.9479 22.928 14.375ZM29.7475 20.5924L24.999 25.3409C24.6785 25.6614 24.159 25.6614 23.8385 25.3409C23.5186 25.021 23.5186 24.5015 23.8385 24.181L28.0073 20.0122L24.3001 16.3049C23.9796 15.9845 23.9796 15.4649 24.3001 15.145C24.62 14.8245 25.1395 14.8245 25.46 15.145L29.7475 19.4325C30.068 19.753 30.068 20.272 29.7475 20.5924Z"
                fill="var(--nav-menu-icon-secondary-accent)"
              />
              <path
                d="M30.0373 10H22.3809C19.5 18 18 22.5 15 30.4859H30.0373C32.2221 30.4859 34 28.708 34 26.5227V13.9632C34 11.7779 32.2221 10 30.0373 10ZM22.928 14.375L18.5901 26.6573C18.4392 27.0849 17.9705 27.3086 17.5434 27.1577C17.1163 27.0067 16.8921 26.538 17.043 26.1109L21.3808 13.8287C21.5318 13.4016 21.9999 13.1773 22.4276 13.3283C22.8547 13.4792 23.0789 13.9479 22.928 14.375ZM29.7475 20.5924L24.999 25.3409C24.6785 25.6614 24.159 25.6614 23.8385 25.3409C23.5186 25.021 23.5186 24.5015 23.8385 24.181L28.0073 20.0122L24.3001 16.3049C23.9796 15.9845 23.9796 15.4649 24.3001 15.145C24.62 14.8245 25.1395 14.8245 25.46 15.145L29.7475 19.4325C30.068 19.753 30.068 20.272 29.7475 20.5924Z"
                fill="var(--nav-menu-icon-primary-accent)"
              />
            </svg>
          </span>
          Developers
        </a>
        <a
          class="e1cw7u4o-el-nav-item-secondary ej3nojh-el-nav-item"
        >
          <span
            class="e14wa5k9-el-nav-item-icon emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 40 40"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.4444 22.1082C18.2439 22.1082 16.2973 23.2761 15.2647 25.1381C16.6358 26.4246 18.4471 27.1863 20.4444 27.1863C22.4417 27.1863 24.253 26.4246 25.6242 25.1381C24.5916 23.2761 22.645 22.1082 20.4444 22.1082Z"
                fill="var(--nav-menu-icon-secondary-accent)"
              />
              <path
                d="M24.6762 17.8763C24.6762 15.5431 22.7776 13.6445 20.4444 13.6445C18.1112 13.6445 16.2126 15.5431 16.2126 17.8763C16.2126 20.2095 18.1112 22.1081 20.4444 22.1081C22.7776 22.1081 24.6762 20.2095 24.6762 17.8763Z"
                fill="var(--nav-menu-icon-secondary-accent)"
              />
              <path
                clip-rule="evenodd"
                d="M31.2081 13.7256C31.9538 14.9167 32.4893 16.2102 32.8058 17.5838L34.8889 18.0905V22.7984L32.8058 23.3051C32.4893 24.6786 31.9538 25.9722 31.2081 27.1633L32.2819 28.9543L28.9543 32.2819L27.1633 31.2081C25.9722 31.9538 24.6786 32.4893 23.3051 32.8058L22.7984 34.8889H18.0905L17.5838 32.8058C16.2102 32.4893 14.9167 31.9538 13.7256 31.2081L11.9346 32.2819L8.60695 28.9543L9.68076 27.1633C8.93513 25.9722 8.39955 24.6786 8.08305 23.3051L6 22.7984V18.0905L8.08305 17.5838C8.39955 16.2102 8.93513 14.9167 9.68076 13.7256L8.60695 11.9346L11.9346 8.60695L13.7256 9.68076C14.9167 8.93513 16.2102 8.39955 17.5838 8.08305L18.0905 6H22.7984L23.3051 8.08305C24.6786 8.39955 25.9722 8.93513 27.1633 9.68076L28.9543 8.60695L32.2819 11.9346L31.2081 13.7256ZM20.4445 30.5118C26.0045 30.5118 30.5118 26.0045 30.5118 20.4444C30.5118 14.8844 26.0045 10.3771 20.4445 10.3771C14.8844 10.3771 10.3771 14.8844 10.3771 20.4444C10.3771 26.0045 14.8844 30.5118 20.4445 30.5118Z"
                fill="var(--nav-menu-icon-primary-accent)"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          Settings
        </a>
      </nav>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <nav
      class="e6wdw83-el-nav-container"
    >
      <a
        class="e1walk9-el-nav-item-active ej3nojh-el-nav-item"
      >
        <span
          class="emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 40 40"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 16.8L20 0L37 16.8V40H3V16.8Z"
              fill="#31448F"
            />
            <path
              d="M3 16.8L20 0L37 16.8V30L3 16.8Z"
              fill="#7BC9EB"
            />
            <path
              d="M37 40H27.0488L12.9512 6.96585L20 0L37 16.8V40Z"
              fill="#0061A8"
            />
            <path
              d="M37 16.8V30L20 23.4829L12.9512 6.96585L20 0L37 16.8Z"
              fill="var(--nav-menu-icon-secondary-accent)"
            />
          </svg>
        </span>
        <span
          class="e1fle5tm-el-intent-neutral et0k7gk-el-ml-auto e164f2tp-el-mr2 e186fz8c-el-nav-item-hide-desktop ej9yrfo-el-icon"
          style="font-size: 2rem;"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="var(--nav-menu-icon-secondary-accent)"
              height="32"
              rx="4"
              width="32"
            />
            <line
              stroke="white"
              stroke-width="1.5"
              x1="10"
              x2="22"
              y1="12.25"
              y2="12.25"
            />
            <line
              stroke="white"
              stroke-width="1.5"
              x1="10"
              x2="22"
              y1="20.25"
              y2="20.25"
            />
            <line
              stroke="white"
              stroke-width="1.5"
              x1="10"
              x2="22"
              y1="16.25"
              y2="16.25"
            />
          </svg>
        </span>
      </a>
      <a
        class="ej3nojh-el-nav-item"
      >
        <span
          class="e14wa5k9-el-nav-item-icon emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 40 40"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="var(--nav-menu-icon-primary-accent)"
              height="27"
              width="15"
              x="13.2"
              y="7"
            />
            <path
              d="M23.3583 8.41675H20.4583C20.0577 8.41675 19.7333 8.74107 19.7333 9.14175C19.7333 9.54242 20.0577 9.86675 20.4583 9.86675H23.3583C23.759 9.86675 24.0833 9.54242 24.0833 9.14175C24.0833 8.74107 23.759 8.41675 23.3583 8.41675Z"
              fill="var(--nav-menu-icon-secondary-accent)"
            />
            <path
              d="M26.5 6H14.9C13.3011 6 12 7.30115 12 8.9V32.1C12 33.6989 13.3011 35 14.9 35H26.5C28.0989 35 29.4 33.6989 29.4 32.1V8.9C29.4 7.30115 28.0989 6 26.5 6ZM27.95 32.1C27.95 32.9009 27.3009 33.55 26.5 33.55H14.9C14.0991 33.55 13.45 32.9009 13.45 32.1V8.9C13.45 8.0991 14.0991 7.45 14.9 7.45H26.5C27.3009 7.45 27.95 8.0991 27.95 8.9V32.1Z"
              fill="var(--nav-menu-icon-primary-accent)"
            />
            <path
              d="M20.7 32.5834C21.5008 32.5834 22.15 31.9342 22.15 31.1334C22.15 30.3325 21.5008 29.6833 20.7 29.6833C19.8992 29.6833 19.25 30.3325 19.25 31.1334C19.25 31.9342 19.8992 32.5834 20.7 32.5834Z"
              fill="var(--nav-menu-icon-secondary-accent)"
            />
            <path
              d="M18.0417 9.86675C18.4421 9.86675 18.7667 9.54215 18.7667 9.14175C18.7667 8.74134 18.4421 8.41675 18.0417 8.41675C17.6413 8.41675 17.3167 8.74134 17.3167 9.14175C17.3167 9.54215 17.6413 9.86675 18.0417 9.86675Z"
              fill="var(--nav-menu-icon-secondary-accent)"
            />
            <path
              d="M34.6411 17.5394C34.4178 16.1104 33.179 15.0137 31.6883 15.0137C31.1275 15.0137 30.5886 15.1688 30.1212 15.4582C29.4101 14.2632 28.13 13.5195 26.7078 13.5195C24.5109 13.5195 22.7234 15.307 22.7234 17.5039C22.7234 17.5175 22.7234 17.5316 22.7239 17.5452C21.312 17.7831 20.2 19.0141 20.2 20.4922C20.2 22.14 21.5737 23.4805 23.2215 23.4805H34.1785C35.8264 23.4805 37.2 22.14 37.2 20.4922C37.2 19.0015 36.07 17.7627 34.6411 17.5394Z"
              fill="var(--nav-menu-icon-secondary-accent)"
            />
          </svg>
        </span>
        Browse
      </a>
      <a
        class="ej3nojh-el-nav-item"
      >
        <span
          class="e14wa5k9-el-nav-item-icon emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 40 40"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21.6406 19.1797H18.3594C17.906 19.1797 17.5391 19.5466 17.5391 20V27.3828H15.8985C15.5876 27.3828 15.3041 27.5582 15.1647 27.8362C15.0261 28.1142 15.0557 28.4466 15.2424 28.695L19.3439 33.6715C19.4985 33.8782 19.7421 34 20 34C20.258 34 20.5015 33.8782 20.6561 33.6715L24.7577 28.695C24.9443 28.4466 24.974 28.1142 24.8354 27.8362C24.696 27.5582 24.4124 27.3828 24.1016 27.3828H22.461V20C22.461 19.5466 22.0941 19.1797 21.6406 19.1797Z"
              fill="var(--nav-menu-icon-secondary-accent)"
            />
            <path
              d="M28.9409 14.2586C28.6037 12.6068 27.2618 11.3138 25.5259 11.0391C24.8097 8.15595 22.1894 6 19.1797 6C16.1764 6 13.5849 8.1239 12.8503 10.983C12.7734 10.979 12.6957 10.9766 12.6172 10.9766C8.99868 10.9766 6 13.9206 6 17.5391C6 21.1576 8.99868 24.1016 12.6172 24.1016H15.8984V20C15.8984 18.643 17.0024 17.5391 18.3594 17.5391H21.6406C22.9976 17.5391 24.1016 18.643 24.1016 20V24.1016H29.0234C31.7375 24.1016 34 21.8938 34 19.1797C34 16.4384 31.6998 14.1905 28.9409 14.2586Z"
              fill="var(--nav-menu-icon-primary-accent)"
            />
          </svg>
        </span>
        Installed
      </a>
      <a
        class="ej3nojh-el-nav-item"
      >
        <span
          class="e14wa5k9-el-nav-item-icon emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 40 40"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25.6627 7.48678H23.4494C23.4494 5.56109 21.905 4 20 4C18.095 4 16.5506 5.56109 16.5506 7.48678H14.3373V11.9565H25.6627V7.48678H25.6627Z"
              fill="var(--nav-menu-icon-secondary-accent)"
            />
            <path
              d="M27.434 7.48682V13.747H12.566V7.48682H9V31.557C9 33.2139 10.3431 34.557 12 34.557H28C29.6569 34.557 31 33.2139 31 31.557V7.48682H27.434ZM20 31.9021C15.9497 31.9021 12.6546 28.5712 12.6546 24.477C12.6546 20.3829 15.9498 17.052 20 17.052C24.0502 17.052 27.3454 20.3829 27.3454 24.477C27.3454 28.5712 24.0503 31.9021 20 31.9021Z"
              fill="var(--nav-menu-icon-primary-accent)"
            />
            <path
              d="M25.1131 23.2122L24.2133 23.0966C24.1391 22.8658 24.0477 22.6433 23.941 22.4318L24.4967 21.7085C24.7216 21.4158 24.6953 21.0026 24.4383 20.751L23.6844 19.989C23.4332 19.7268 23.0244 19.7007 22.7344 19.9276L22.0198 20.4893C21.8106 20.3814 21.5904 20.289 21.3617 20.214L21.2473 19.3059C21.2042 18.9416 20.8983 18.6672 20.536 18.6672H19.4639C19.1016 18.6672 18.7957 18.9416 18.7526 19.3044L18.6383 20.214C18.4095 20.289 18.1893 20.3809 17.9801 20.4893L17.2651 19.9276C16.976 19.7007 16.5672 19.7268 16.3179 19.9866L15.564 20.7481C15.3046 21.0026 15.2783 21.4158 15.5032 21.709L16.0589 22.4318C15.9517 22.6433 15.8608 22.8658 15.7866 23.0966L14.8882 23.2122C14.5278 23.2558 14.2564 23.5649 14.2564 23.9312V25.0149C14.2564 25.3812 14.5278 25.6903 14.8868 25.7339L15.7866 25.8495C15.8608 26.0803 15.9522 26.3029 16.0589 26.5143L15.5032 27.2376C15.2783 27.5303 15.3046 27.9435 15.5616 28.1951L16.3155 28.9571C16.5672 29.2188 16.9755 29.245 17.2655 29.0181L17.9806 28.4563C18.1898 28.5647 18.4099 28.6571 18.6383 28.7316L18.7526 29.6393C18.7957 30.0046 19.1016 30.2789 19.4639 30.2789H20.536C20.8983 30.2789 21.2042 30.0046 21.2473 29.6417L21.3617 28.7321C21.59 28.6571 21.8101 28.5647 22.0193 28.4568L22.7348 29.0185C23.0244 29.2459 23.4332 29.2193 23.682 28.9595L24.4359 28.1975C24.6953 27.943 24.7216 27.5303 24.4967 27.2371L23.941 26.5143C24.0482 26.3029 24.1396 26.0803 24.2133 25.8495L25.1112 25.7339C25.4716 25.6903 25.743 25.3812 25.743 25.0149V23.9312C25.7435 23.5649 25.4721 23.2558 25.1131 23.2122ZM20 26.8922C18.6804 26.8922 17.6068 25.8069 17.6068 24.4731C17.6068 23.1392 18.6804 22.054 20 22.054C21.3195 22.054 22.3931 23.1392 22.3931 24.4731C22.3931 25.8069 21.3195 26.8922 20 26.8922Z"
              fill="var(--nav-menu-icon-secondary-accent)"
            />
          </svg>
        </span>
        Manage
      </a>
      <a
        class="ej3nojh-el-nav-item"
      >
        <span
          class="e14wa5k9-el-nav-item-icon emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 40 40"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M30.0373 10H9.96266C7.77789 10 6 11.7779 6 13.9632V26.5227C6 28.708 7.77789 30.4859 9.96266 30.4859H30.0373C32.2221 30.4859 34 28.708 34 26.5227V13.9632C34 11.7779 32.2221 10 30.0373 10ZM16.1615 16.3049L11.9927 20.4738L15.6999 24.181C16.0204 24.5015 16.0204 25.021 15.6999 25.3409C15.38 25.6614 14.8605 25.6614 14.54 25.3409L10.2525 21.0534C9.93203 20.733 9.93203 20.214 10.2525 19.8935L15.001 15.145C15.3215 14.8245 15.841 14.8245 16.1615 15.145C16.4814 15.4649 16.4814 15.9845 16.1615 16.3049ZM22.928 14.375L18.5902 26.6573C18.4392 27.0849 17.9705 27.3086 17.5434 27.1577C17.1163 27.0067 16.8921 26.538 17.043 26.1109L21.3809 13.8287C21.5318 13.4016 21.9999 13.1773 22.4276 13.3283C22.8547 13.4792 23.0789 13.9479 22.928 14.375ZM29.7475 20.5924L24.999 25.3409C24.6785 25.6614 24.159 25.6614 23.8385 25.3409C23.5186 25.021 23.5186 24.5015 23.8385 24.181L28.0073 20.0122L24.3001 16.3049C23.9796 15.9845 23.9796 15.4649 24.3001 15.145C24.62 14.8245 25.1395 14.8245 25.46 15.145L29.7475 19.4325C30.068 19.753 30.068 20.272 29.7475 20.5924Z"
              fill="var(--nav-menu-icon-secondary-accent)"
            />
            <path
              d="M30.0373 10H22.3809C19.5 18 18 22.5 15 30.4859H30.0373C32.2221 30.4859 34 28.708 34 26.5227V13.9632C34 11.7779 32.2221 10 30.0373 10ZM22.928 14.375L18.5901 26.6573C18.4392 27.0849 17.9705 27.3086 17.5434 27.1577C17.1163 27.0067 16.8921 26.538 17.043 26.1109L21.3808 13.8287C21.5318 13.4016 21.9999 13.1773 22.4276 13.3283C22.8547 13.4792 23.0789 13.9479 22.928 14.375ZM29.7475 20.5924L24.999 25.3409C24.6785 25.6614 24.159 25.6614 23.8385 25.3409C23.5186 25.021 23.5186 24.5015 23.8385 24.181L28.0073 20.0122L24.3001 16.3049C23.9796 15.9845 23.9796 15.4649 24.3001 15.145C24.62 14.8245 25.1395 14.8245 25.46 15.145L29.7475 19.4325C30.068 19.753 30.068 20.272 29.7475 20.5924Z"
              fill="var(--nav-menu-icon-primary-accent)"
            />
          </svg>
        </span>
        Developers
      </a>
      <a
        class="e1cw7u4o-el-nav-item-secondary ej3nojh-el-nav-item"
      >
        <span
          class="e14wa5k9-el-nav-item-icon emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 40 40"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20.4444 22.1082C18.2439 22.1082 16.2973 23.2761 15.2647 25.1381C16.6358 26.4246 18.4471 27.1863 20.4444 27.1863C22.4417 27.1863 24.253 26.4246 25.6242 25.1381C24.5916 23.2761 22.645 22.1082 20.4444 22.1082Z"
              fill="var(--nav-menu-icon-secondary-accent)"
            />
            <path
              d="M24.6762 17.8763C24.6762 15.5431 22.7776 13.6445 20.4444 13.6445C18.1112 13.6445 16.2126 15.5431 16.2126 17.8763C16.2126 20.2095 18.1112 22.1081 20.4444 22.1081C22.7776 22.1081 24.6762 20.2095 24.6762 17.8763Z"
              fill="var(--nav-menu-icon-secondary-accent)"
            />
            <path
              clip-rule="evenodd"
              d="M31.2081 13.7256C31.9538 14.9167 32.4893 16.2102 32.8058 17.5838L34.8889 18.0905V22.7984L32.8058 23.3051C32.4893 24.6786 31.9538 25.9722 31.2081 27.1633L32.2819 28.9543L28.9543 32.2819L27.1633 31.2081C25.9722 31.9538 24.6786 32.4893 23.3051 32.8058L22.7984 34.8889H18.0905L17.5838 32.8058C16.2102 32.4893 14.9167 31.9538 13.7256 31.2081L11.9346 32.2819L8.60695 28.9543L9.68076 27.1633C8.93513 25.9722 8.39955 24.6786 8.08305 23.3051L6 22.7984V18.0905L8.08305 17.5838C8.39955 16.2102 8.93513 14.9167 9.68076 13.7256L8.60695 11.9346L11.9346 8.60695L13.7256 9.68076C14.9167 8.93513 16.2102 8.39955 17.5838 8.08305L18.0905 6H22.7984L23.3051 8.08305C24.6786 8.39955 25.9722 8.93513 27.1633 9.68076L28.9543 8.60695L32.2819 11.9346L31.2081 13.7256ZM20.4445 30.5118C26.0045 30.5118 30.5118 26.0045 30.5118 20.4444C30.5118 14.8844 26.0045 10.3771 20.4445 10.3771C14.8844 10.3771 10.3771 14.8844 10.3771 20.4444C10.3771 26.0045 14.8844 30.5118 20.4445 30.5118Z"
              fill="var(--nav-menu-icon-primary-accent)"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        Settings
      </a>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
